--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
@@ -227,10 +227,9 @@
         android:layout_gravity="center">
 
         <Button
-            android:id="@+id/matrixAB"
+            android:id="@+id/matrix_LU"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="Cholesky"
             android:text="VER LU"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
