--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_resultado_matrices.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_resultado_matrices.xml
@@ -2,15 +2,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ap_white"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.androidplot.demos.resultado_matrices">
     <ScrollView
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
         android:scrollbars="horizontal|vertical"
         android:layout_width="match_parent"
         android:layout_marginTop="5dip"
         android:scrollbarStyle="outsideInset"
+
         android:fillViewport="true">
 
         <HorizontalScrollView
@@ -20,7 +22,7 @@
             android:layout_marginTop="5dip">
 
             <TableLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/TableResultado"
                 >
