--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_iterativos.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_iterativos.xml
@@ -122,8 +122,8 @@
 
                 <TableLayout
                     android:id="@+id/VectorX"
-                    android:layout_width="35dp"
-                    android:layout_height="91dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="70dp"
                     android:layout_marginStart="-5dp"
                     android:layout_marginBottom="8dp"
