--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_matrix2.xml
@@ -112,8 +112,8 @@
 
                 <TableLayout
                     android:id="@+id/VectorX"
-                    android:layout_width="35dp"
-                    android:layout_height="91dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="50dp"
                     android:layout_marginStart="40dp"
                     android:layout_marginBottom="8dp"
