--- a/elemental/Elemental/demoapp/src/main/res/layout/main.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/ap_white"
-    tools:context="com.androidplot.demos.graficarfuncionActivity">
+    tools:context="com.androidplot.demos.MainActivity">
 
     <!--
   ~ Copyright 2015 AndroidPlot.com
