--- a/elemental/Elemental/demoapp/src/main/res/layout/metodobiseccion.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/metodobiseccion.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="250dp"
-    android:theme="@style/Theme.proyecto"
+    android:background="@color/ap_white"
     tools:context="com.androidplot.demos.metodobiseccionActivity">
 
     <TextView
