--- a/elemental/Elemental/demoapp/src/main/res/layout/metodobiseccion.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/metodobiseccion.xml
@@ -185,16 +185,33 @@
 
     <Button
         android:id="@+id/Graficador"
-        android:layout_width="95dp"
-        android:layout_height="53dp"
+        android:layout_width="81dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Plotter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/showTable"
+        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/AitkenResult"
+        app:layout_constraintVertical_bias="0.789" />
+
+    <Button
+        android:id="@+id/ayudaBiseccion"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="ShowPopup"
+        android:text="Help"
         app:layout_constraintBottom_toTopOf="@+id/funcion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.822"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
