--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_busquedas_incrementales.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_busquedas_incrementales.xml
@@ -151,14 +151,34 @@
     <Button
         android:id="@+id/Graficador"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="46dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="272dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Plotter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.307"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/showTable"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/ayudaIncremental"
+        android:layout_width="71dp"
+        android:layout_height="0dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Plotter"
-        app:layout_constraintBottom_toTopOf="@+id/funcioninc"
+        android:onClick="ShowPopupincremental"
+        android:text="Help"
+        app:layout_constraintBottom_toTopOf="@+id/funcion"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.822"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="UnknownIdInLayout" />
 </android.support.constraint.ConstraintLayout>
