--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_puntofijo.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_puntofijo.xml
@@ -227,17 +227,34 @@
 
     <Button
         android:id="@+id/Graficador"
-        android:layout_width="85dp"
-        android:layout_height="46dp"
+        android:layout_width="83dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Plotter"
-        app:layout_constraintBottom_toTopOf="@+id/view12"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/showTable"
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/StefensenResult"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/ayudaBiseccion"
+        android:layout_width="68dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="ShowPopup"
+        android:text="Help"
+        app:layout_constraintBottom_toTopOf="@+id/funcion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.822"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
