--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_graph.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_graph.xml
@@ -111,4 +111,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.997" />
 
+    <Button
+        android:id="@+id/ayudaBiseccion"
+        android:layout_width="68dp"
+        android:layout_height="40dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="ShowPopupgraficar"
+        android:text="Help"
+        app:layout_constraintBottom_toTopOf="@+id/funcion"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.822"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
+
 </android.support.constraint.ConstraintLayout>
