--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_multiple_root.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_multiple_root.xml
@@ -208,14 +208,32 @@
         android:layout_width="96dp"
         android:layout_height="49dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="272dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Plotter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Resultado"
+        app:layout_constraintVertical_bias="0.777" />
+
+    <Button
+        android:id="@+id/ayudaIncremental"
+        android:layout_width="69dp"
+        android:layout_height="46dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="ShowPopuproots"
+        android:text="Help"
         app:layout_constraintBottom_toTopOf="@+id/funcion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toEndOf="@+id/Newton"
+        app:layout_constraintHorizontal_bias="0.822"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.727" />
+        app:layout_constraintVertical_bias="0.562"
+        tools:ignore="UnknownIdInLayout" />
 </android.support.constraint.ConstraintLayout>
