--- a/elemental/Elemental/androidplot-core/src/main/res/values/styles.xml
+++ b/elemental/Elemental/androidplot-core/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.proyecto" parent="Theme.AppCompat.NoActionBar" >
+    <style name="Theme.proyecto" parent="Secundario" >
         <item name="android:colorPrimary">@color/legacy_primary</item>
         <item name="android:colorPrimaryDark">@color/legacy_primary_dark</item>
         <item name="android:colorBackground">@color/legacy_primary_dark</item>
@@ -13,9 +13,10 @@
         <item name="colorAccent">@color/legacy_primary_dark</item>
     </style>
 
-    <style name="Secundario" parent="android:Theme.Material.Light.NoActionBar" >
-        <item name="android:colorPrimary">@android:color/background_light</item>
-        <item name="android:colorBackground">@android:color/holo_blue_dark</item>
+    <style name="Secundario" parent="android:Theme.Holo.Light.NoActionBar.Fullscreen" >
+        <item name="android:colorPrimary">@android:color/background_dark</item>
+        <item name="android:colorBackground">@color/accent_material_light</item>
         <item name="android:colorAccent">@color/accent_material_light</item>
+        <item name="android:textColorSecondaryInverse">@color/holo_blue_bright</item>
     </style>
 </resources>
