--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_newton.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_newton.xml
@@ -128,7 +128,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Resultado"
-        app:layout_constraintVertical_bias="0.086" />
+        app:layout_constraintVertical_bias="0.043" />
 
     <EditText
         android:id="@+id/Tolerancia"
@@ -186,17 +186,33 @@
 
     <Button
         android:id="@+id/Graficador"
-        android:layout_width="86dp"
-        android:layout_height="wrap_content"
+        android:layout_width="78dp"
+        android:layout_height="36dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="Plotter"
-        app:layout_constraintBottom_toTopOf="@+id/derivada"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/showTable"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/showTable" />
+
+    <Button
+        android:id="@+id/ayudaIncremental"
+        android:layout_width="71dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="ShowPopupNewton"
+        android:text="Help"
+        app:layout_constraintBottom_toTopOf="@+id/funcion"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.777"
-        app:layout_constraintStart_toEndOf="@+id/Newton"
+        app:layout_constraintHorizontal_bias="0.822"
+        app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.163" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="UnknownIdInLayout" />
 </android.support.constraint.ConstraintLayout>
