mas implementaciones y mas

--- a/elemental/Elemental/demoapp/src/main/res/layout/activity_interpolacion_metodos.xml
+++ b/elemental/Elemental/demoapp/src/main/res/layout/activity_interpolacion_metodos.xml
@@ -85,19 +85,16 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="80dp"
-        android:text="Slites"
+        android:text="Splines"
         android:textColor="@color/ap_black"
         android:textSize="25dp"
         android:textStyle="italic"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/NewtonDivision"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/NewtonDivision" />
 
     <TextView
         android:id="@+id/textView5"
